--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,30 @@
 version: '3.8'
 services:
+  database:
+    command: --default-authentication-plugin=mysql_native_password
+    image: mysql:latest
+    ports:
+      - "3308:3306"
+    expose:
+      - 3306
+    volumes:
+      - ./database:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
+      MYSQL_DATABASE: ${DB_NAME}
   frontend:
     build: "./frontend"
     ports:
       - "3000:3000"
+  api:
+    build: "./api"
+    depends_on:
+      - database
+    ports:
+      - "3001:3000"
+    environment:
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME} 
