--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,8 @@
     "drizzle-orm": "^0.30.3",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "tsx": "^4.7.1"
   },
   "devDependencies": {
     "drizzle-kit": "^0.20.14"
