--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
   "type": "module",
   "devDependencies": {
     "autoprefixer": "^10.4.15",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "postcss": "^8.4.28",
     "solid-start-node": "^0.3.8",
     "tailwindcss": "^3.3.3",
@@ -16,8 +19,10 @@
   "dependencies": {
     "@solidjs/meta": "^0.28.6",
     "@solidjs/router": "^0.8.3",
+    "eslint-plugin-solid": "^0.13.2",
     "solid-js": "^1.8.3",
-    "solid-start": "^0.3.8"
+    "solid-start": "^0.3.8",
+    "tsx": "^4.7.1"
   },
   "engines": {
     "node": "18"
