--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,8 @@ services:
   api:
     build: "./api"
     depends_on:
-      - database
+      - "database"
+    restart: always
     ports:
       - "3001:3000"
     environment:
