--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,9 @@
     "generate": "drizzle-kit generate:mysql --out migrations-folder --schema db/schema/schema.ts"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.3",
