--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "generate": "drizzle-kit generate:mysql --out migrations-folder --schema db/schema/schema.ts"
+    "generate": "drizzle-kit generate:mysql"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
