--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,30 +1,21 @@
 {
-  "name": "solid-docker",
-  "scripts": {
-    "dev": "solid-start dev",
-    "build": "solid-start build",
-    "start": "solid-start dev"
-  },
+  "name": "example-with-tailwindcss",
   "type": "module",
-  "devDependencies": {
-    "autoprefixer": "^10.4.15",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "postcss": "^8.4.28",
-    "solid-start-node": "^0.3.8",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.9"
+  "scripts": {
+    "dev": "vinxi dev",
+    "build": "vinxi build",
+    "start": "vinxi start"
   },
   "dependencies": {
-    "@solidjs/meta": "^0.28.6",
-    "@solidjs/router": "^0.8.3",
-    "eslint-plugin-solid": "^0.13.2",
-    "solid-js": "^1.8.3",
-    "solid-start": "^0.3.8",
-    "tsx": "^4.7.1"
+    "@solidjs/router": "^0.13.1",
+    "@solidjs/start": "^1.0.0-rc.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.26",
+    "solid-js": "^1.8.16",
+    "tailwindcss": "^3.3.3",
+    "vinxi": "^0.3.10"
   },
   "engines": {
-    "node": "18"
+    "node": ">=18"
   }
 }
