--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@solidjs/router": "^0.13.1",
     "@solidjs/start": "^1.0.0-rc.0",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.6.8",
+    "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.26",
     "solid-js": "^1.8.16",
     "tailwindcss": "^3.3.3",
