--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,23 @@
   "scripts": {
     "dev": "vinxi dev",
     "build": "vinxi build",
-    "start": "vinxi start"
+    "start": "vinxi start",
+    "jsonserver": "json-server -p 3301 db.json",
+    "all": "run-p jsonserver dev"
   },
   "dependencies": {
     "@solidjs/router": "^0.13.1",
     "@solidjs/start": "^1.0.0-rc.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.6.8",
-    "json-server": "^1.0.0-alpha.23",
     "postcss": "^8.4.26",
     "solid-js": "^1.8.16",
     "tailwindcss": "^3.3.3",
     "vinxi": "^0.3.10"
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-alpha.23",
+    "npm-run-all": "^4.1.5"
   },
   "engines": {
     "node": ">=18"
