--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,7 @@
     "generate": "drizzle-kit generate:mysql"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -14,6 +15,9 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.3",
     "express": "~4.16.1",
+    "joi": "^17.12.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.9.2",
     "tsx": "^4.7.1"
