--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,10 +12,6 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
-  frontend:
-    build: "./frontend"
-    ports:
-      - "3000:3000"
   api:
     build: "./api"
     depends_on:
@@ -29,6 +25,7 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME} 
+      JWT_KEY: ${JWT_KEY}
   frontend:
     build: "./frontend"
     ports:
