--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -16,10 +16,10 @@ EXPOSE 3000
 ENV HOST=0.0.0.0
 
 # For testing purposes with json-server
-CMD [ "npm", "run", "all" ]
-EXPOSE 3301
+# CMD [ "npm", "run", "all" ]
+# EXPOSE 3301
 
 # Mitigate HMR console spam
 EXPOSE 3003
 
-# CMD [ "npm", "run", "dev" ]
+CMD [ "npm", "run", "dev" ]
