--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   database:
-    command: --default-authentication-plugin=mysql_native_password
+    command: --mysql_native_password:ON
     image: mysql:latest
     ports:
       - "3308:3306"
