--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,10 +11,15 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
+  filesystem:
+    build: "./filesystem"
+    ports:
+    - "7070:7070"
   api:
     build: "./api"
     depends_on:
       - database
+      - filesystem
     restart: always
     ports:
       - "3001:3000"
@@ -25,6 +30,7 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       DB_NAME: ${DB_NAME} 
       JWT_KEY: ${JWT_KEY}
+      filesystem: ${filesystem}
   frontend:
     build: "./frontend"
     ports:
@@ -36,7 +42,3 @@ services:
       VITE_API_HOST: ${API_HOST}
     depends_on:
       - api
-  filesystem:
-    build: "./filesystem"
-    ports:
-    - "7070:7070"
